--- a/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
@@ -32,9 +32,12 @@
         endpoint: /rest/v1/VirDomainSnapshot
       register: vm_snapshots_api
     - ansible.builtin.set_fact:
-        existing_snapshot_label: "{{ vm_snapshots_api.record[0].label }}"
-        existing_snapshot_vm_name: "{{ vm_snapshots_api.record[0].domain.name }}"
-        existing_snapshot_serial: "{{ vm_snapshots_api.record[0].domain.snapshotSerialNumber }}"
+        existing_snapshot_label: |
+          "{{ vm_snapshots_api.record[0].label }}"
+        existing_snapshot_vm_name: |
+          "{{ vm_snapshots_api.record[0].domain.name }}"
+        existing_snapshot_serial: |
+          "{{ vm_snapshots_api.record[0].domain.snapshotSerialNumber }}"
     - ansible.builtin.debug:
         msg:
           - "{{ existing_snapshot_label }}"
@@ -90,7 +93,8 @@
     - ansible.builtin.assert: *assert-existing
     - ansible.builtin.assert:
         that:
-          - vm_snapshots.records | length == 6  # 3 on each of the 2 created testing vms
+          # 3 on each of the 2 created testing vms
+          - vm_snapshots.records | length == 6
           - vm_snapshots.records[0].label == "not-unique"
 
     - name: List all VM snapshots with a nonexistent label
@@ -113,7 +117,8 @@
     - ansible.builtin.assert: *assert-existing
     - ansible.builtin.assert:
         that:
-          - vm_snapshots.records | length == 6  # there are 6 snapshots of vm snapshot-test-vm-1
+          # there are 6 snapshots of vm snapshot-test-vm-1
+          - vm_snapshots.records | length == 6
           - vm_snapshots.records[0].vm.name == "snapshot-test-vm-1"
 
     - name: List all VM snapshots with a nonexistent vm_name
@@ -124,7 +129,9 @@
         var: vm_snapshots.records
     - ansible.builtin.assert: *assert-nonexistent
 
-    - name: List all VM snapshots with serial "3"  # the last snapshot serial of each vm is 3, so there should be 2 snapshots with the serial 3
+    # the last snapshot serial of each vm is 3,
+    # so there should be 2 snapshots with the serial 3
+    - name: List all VM snapshots with serial "3"
       scale_computing.hypercore.vm_snapshot_info:
         serial: 3
       register: vm_snapshots
@@ -133,10 +140,13 @@
     - ansible.builtin.assert: *assert-existing
     - ansible.builtin.assert:
         that:
-          - vm_snapshots.records | length >= 2  # there are 2 or more snapshots with serial "3": snap-0 and not-unique
+          # there are 2 or more snapshots with serial "3": snap-0 and not-unique
+          - vm_snapshots.records | length >= 2
           - vm_snapshots.records[0].vm.snapshot_serial_number == 3
-          - vm1.records.0.uuid in vm_snapshots.records | map(attribute='vm.uuid')
-          - vm2.records.0.uuid in vm_snapshots.records | map(attribute='vm.uuid')
+          - vm1.records.0.uuid in vm_snapshots.records |
+            map(attribute='vm.uuid')
+          - vm2.records.0.uuid in vm_snapshots.records |
+            map(attribute='vm.uuid')
 
     - name: List all VM snapshots with a nonexistent serial
       scale_computing.hypercore.vm_snapshot_info:
