--- a/examples/vm_snapshot_clone_update/vars.yml
+++ b/examples/vm_snapshot_clone_update/vars.yml
@@ -1,7 +1,7 @@
 ---
 # VM to create, install nginx and "deploy" a simple static web page.
 source_vm_name: demo-snapshot-source
-# VM snapshot with label source_snapshot_label will be craete from VM source_vm_name.
+# VM snapshot with label source_snapshot_label will be created from VM source_vm_name.
 source_snapshot_label: demo-snapshot-label-0
 # Old snapshot with same label will be removed, and new one created.
 source_snapshot_force_recreate: true
