--- a/examples/vm_os_upgrade/03_create_source_vm.yml
+++ b/examples/vm_os_upgrade/03_create_source_vm.yml
@@ -15,7 +15,7 @@
         tags:
           - demo
           - ansible_enable
-          - ansible_ssh_private_key_file__examples/vm_snapshot_clone_update/demo_ssh_key
+          - ansible_ssh_private_key_file__examples/vm_os_upgrade/{{ demo_ssh_key_path }}
         memory: "{{ '1 GB' | human_to_bytes }}"
         vcpu: 2
         disks:
