--- a/examples/vm_os_upgrade/03_create_source_vm.yml
+++ b/examples/vm_os_upgrade/03_create_source_vm.yml
@@ -1,3 +1,9 @@
+- name: Delete "{{ source_vm_name }}"
+  scale_computing.hypercore.vm:
+    vm_name: "{{ source_vm_name }}"
+    state: absent
+  when: False
+
 - name: List VM "{{ source_vm_name }}"
   scale_computing.hypercore.vm_info:
     vm_name: "{{ source_vm_name }}"
