--- a/tests/integration/targets/inventory/run_ansible_both_true_tests.yml
+++ b/tests/integration/targets/inventory/run_ansible_both_true_tests.yml
@@ -6,6 +6,7 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_config[sc_host].sc_username }}"
     SC_PASSWORD: "{{ sc_config[sc_host].sc_password }}"
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   tasks:
     - block:
