Change vm_snapshot_attach_disk record, change vm_snapshot_info return, update their docs, update unit and integ tests.

--- a/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/01_vm_snapshot_info.yml
@@ -65,7 +65,7 @@
       scale_computing.hypercore.vm_snapshot_info:
       register: vm_snapshots
     - ansible.builtin.debug:
-        var: vm_snapshots.records[0].keys() | sort
+        var: vm_snapshots.records[0]
     - ansible.builtin.assert: &assert-existing
         that:
           - vm_snapshots is not changed
