--- a/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/03_vm_snapshot_attach_disk.yml
@@ -60,7 +60,7 @@
           - result is changed
     - ansible.builtin.assert: &test-virtio
         that:
-          - result.record.type == "VIRTIO_DISK"
+          - result.record.type == "virtio_disk"
           - result.record.slot == slot_a
           - result.record.vm_uuid == vm_2_info.records[0].uuid
 
@@ -103,7 +103,7 @@
           - result is changed
     - ansible.builtin.assert: &test-not-virtio
         that:
-          - result.record.type == "IDE_DISK"
+          - result.record.type == "ide_disk"
           - result.record.slot == slot_b
           - result.record.vm_uuid == vm_2_info.records[0].uuid
 
@@ -130,7 +130,7 @@
 
     - name: >-
         Attach "snap-0" from VM "{{ vm_1 }}"
-        to VM "{{ vm_1 }}" - as VIRTIO_DISK
+        to VM "{{ vm_1 }}"
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
@@ -147,13 +147,13 @@
           - result is changed
     - ansible.builtin.assert: &test-virtio-2
         that:
-          - result.record.type == "VIRTIO_DISK"
+          - result.record.type == "virtio_disk"
           - result.record.slot == slot_a
           - result.record.vm_uuid == vm_1_info.records[0].uuid
 
     - name: >-
         IDEMPOTENCE - Attach "snap-0" from VM "{{ vm_1 }}"
-        to VM "{{ vm_1 }}" - as VIRTIO_DISK
+        to VM "{{ vm_1 }}"
       scale_computing.hypercore.vm_snapshot_attach_disk:
         vm_name: "{{ vm_1 }}"
         vm_disk_type: virtio_disk
