--- a/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/helper_api_vm_snapshot_create.yml
@@ -1,4 +1,7 @@
 ---
+# ++++++++++++++++++++++++++++++
+# First two VMs will have snapshots, the rest will not!
+# ++++++++++++++++++++++++++++++
 - name: Create test VMs
   scale_computing.hypercore.vm:
     vm_name: "snapshot-test-vm-{{ item }}"
@@ -9,7 +12,7 @@
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
     attach_guest_tools_iso: false
-    power_state: start
+    power_state: stop
     disks:
       - type: virtio_disk
         disk_slot: 0
