--- a/tests/integration/targets/vm_snapshot/tasks/main.yml
+++ b/tests/integration/targets/vm_snapshot/tasks/main.yml
@@ -6,16 +6,23 @@
     SC_TIMEOUT: "{{ sc_timeout }}"
 
   vars:
-    number_of_snapshot_testing_vms: 2
+    number_of_snapshot_testing_vms: 3
     non_unique_snapshot_label: not_unique
-    # unique snapshot labels are strings like: snap-x, where x is an iterative number
-    # -- snap-0 is the oldest snapshot, anything greater than 0, is a newer snapshot
+    # unique snapshot labels are strings like:
+    # snap-x, where x is an iterative number
+    # -- snap-0 is the oldest snapshot, anything
+    #    greater than 0, is a newer snapshot
 
   block:
     - include_tasks: 01_vm_snapshot_info.yml
       vars:
         test_vms_number: "{{ number_of_snapshot_testing_vms }}"
+
     - include_tasks: 02_vm_snapshot.yml
+
+    - include_tasks: 03_vm_snapshot_attach_disk.yml
+      vars:
+        test_vms_number: "{{ number_of_snapshot_testing_vms }}"
   always:
     - include_tasks: helper_api_vm_snapshot_delete_all.yml
       vars:
