--- a/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
+++ b/tests/integration/targets/vm_clone/tasks/01_cleanup.yml
@@ -40,3 +40,4 @@
     - XLAB-vm_clone_CI-test-clone-from-snapshot-source
     - XLAB-vm_clone_CI-test-clone-from-snapshot-clone
     - XLAB-vm_clone_CI-test-clone-from-snapshot-clone-2
+    - XLAB-vm_clone_CI-test-clone-from-snapshot-clone-3
