Fix cloud-init meta-data/user-data content being mixed
A number of examples were including user-data content into meta-data
section, and user-data section containing a bogus meta-data content.

Change this, examples should be close to valid and runnuble example.

Also add extra note to user-data example file that the file must
begin with magic comment. This is always very easy to miss.

Signed-off-by: Justin Cinkelj <justin.cinkelj@xlab.si>

--- a/examples/cloud-init-user-data-example.yml
+++ b/examples/cloud-init-user-data-example.yml
@@ -1,9 +1,12 @@
 #cloud-config
+# NOTE: The cloud-init user-data MUST begin with be "#cloud-config" string!
+#
 # Tested with Ubuntu 20.04.4 LTS server ISO image
 # https://releases.ubuntu.com/20.04.4/ubuntu-20.04.4-live-server-amd64.iso
-# cp cloud-init-user-data.ubuntu-2004.yml /tmp/user-data
-# echo -n '' > /tmp/meta-data
-# sudo cloud-localds /var/lib/libvirt/boot/cloud-init-min.iso /tmp/user-data /tmp/meta-data
+# To manually test cloud-init ISO image, create one with commands:
+#   cp cloud-init-user-data-example.yml /tmp/user-data
+#   echo -n '' > /tmp/meta-data
+#   sudo cloud-localds /var/lib/libvirt/boot/cloud-init-min.iso /tmp/user-data /tmp/meta-data
 autoinstall:
     version: 1
     locale: en_US
