--- a/examples/vm_os_upgrade/04_setup_source_vm.yml
+++ b/examples/vm_os_upgrade/04_setup_source_vm.yml
@@ -6,7 +6,11 @@
     src: index.html
     dest: /var/www/html/index.html
 
-# Firewall needs to be opened
+- name: Debug
+  ansible.builtin.debug:
+    var: ansible_default_ipv4_addresses
+
+# # Firewall needs to be opened
 - name: Check index.html is served to external host
   ansible.builtin.uri:
     url: "http://{{ ansible_default_ipv4.address }}"
