--- a/examples/vm_os_upgrade/05_clone_from_source.yml
+++ b/examples/vm_os_upgrade/05_clone_from_source.yml
@@ -1,30 +1,26 @@
-- name: Create vm-focal-fossa snapshot
+- name: Create snapshot for source VM
   scale_computing.hypercore.vm_snapshot:
     state: present
     vm_name: "{{ source_vm_name }}"
     label: "{{ source_snapshot_label }}"
   register: vm_created_snapshot
 
-- name: Clone vm-focal-fossa snapshot into vm-focal-fossa-clone
+- name: Clone source VM
   scale_computing.hypercore.vm_clone:
     vm_name: "{{ cloned_vm_name }}"
     source_vm_name: "{{ source_vm_name }}"  # latest snapshot will be cloned
-    # tags:
-    #   - ansible_enable
-    #   - ansible_ssh_private_key_file__examples/vm_os_upgrade/{{ demo_ssh_key_path }}
-    #   - ansible_user__myuser
   register: vm_cloned
 - ansible.builtin.assert:
     that:
       - vm_cloned is changed
       - vm_cloned.msg == "Virtual machine - {{ source_vm_name }} - cloning complete to - {{ cloned_vm_name }}."
 
-- name: Power on the VM
+- name: Power on cloned VM
   scale_computing.hypercore.vm_params:
     vm_name: "{{ cloned_vm_name }}"
     power_state: start
 
-- name: Wait until VM reports its IP address
+- name: Wait until cloned VM reports its IP address
   scale_computing.hypercore.vm_info:
     vm_name: "{{ cloned_vm_name }}"
   register: cloned_vm_info
